--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ pharmacyapi.invalid.prescription.location=Invalid Prescription Location
 pharmacyapi.location.not.found=Location with uuid ''{0}'' not found
 pharmacyapi.cannot.create.prescription.without.date=Cannot create a Prescription without Prescription Date
 pharmacyapi.cannot.create.prescription.for.future.date=Cannot create a Prescription for future Date ''{0}''
+pharmacyapi.prescription.cannot.be.created.due.exisiting.active.arv.prescription=Prescription cannot be created due existing active ARV prescription
+pharmacyapi.error.visit.not.found.for.patient=No checkin found for patient ''{0}''
+pharmacyapi.error.encounter.not.found.for.patient=Encounter was not found for patient ''{0}''
