--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -6,3 +6,5 @@ pharmacyapi.invalid.prescription.location=Local de Prescricao invalido
 pharmacyapi.location.not.found=Local com uuid ''{0}'' nao encontrado
 pharmacyapi.cannot.create.prescription.without.date=Nao pode criar Prescricao sem data de Prescricao informada
 pharmacyapi.cannot.create.prescription.for.future.date=Nao e possivel criar Prescricao para data futura''{0}''
+pharmacyapi.error.visit.not.found.for.patient=Nao foi efectuado checkin para o paciente ''{0}''
+pharmacyapi.error.encounter.not.found.for.patient=Nao foi encontrado Seguimento para o paciente ''{0}''
