Not allow to perform the cancelation of  a dispensation when exists active ART prescriptions

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ pharmacyapi.cannot.create.prescription.for.future.date=Cannot create a Prescript
 pharmacyapi.prescription.cannot.be.created.due.exisiting.active.arv.prescription=Prescription cannot be created due existing active ARV prescription
 pharmacyapi.error.visit.not.found.for.patient=No checkin found for patient ''{0}''
 pharmacyapi.error.encounter.not.found.for.patient=Encounter was not found for patient ''{0}''
+pharmacyapi.cannot.cancel.dispensation.due.existence.of.active.arv.prescriptions=It is not possible to cancel the dispensation because there are active ARV prescription(s)
