--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -8,3 +8,4 @@ pharmacyapi.cannot.create.prescription.without.date=Nao pode criar Prescricao se
 pharmacyapi.cannot.create.prescription.for.future.date=Nao e possivel criar Prescricao para data futura''{0}''
 pharmacyapi.error.visit.not.found.for.patient=Nao foi efectuado checkin para o paciente ''{0}''
 pharmacyapi.error.encounter.not.found.for.patient=Nao foi encontrado Seguimento para o paciente ''{0}''
+pharmacyapi.cannot.cancel.dispensation.due.existence.of.active.arv.prescriptions=Não é possíve cancelar a dispensa pois existe(em) prescrição(ões)ARV Activa(s)
