changed the way to calculate the prescription Duration before and after the first dispensation

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ pharmacyapi.cannot.create.prescription.for.future.date=Cannot create a Prescript
 pharmacyapi.prescription.cannot.be.created.due.exisiting.active.arv.prescription=Prescription cannot be created due existing active ARV prescription
 pharmacyapi.error.visit.not.found.for.patient=No checkin found for patient ''{0}''
 pharmacyapi.error.encounter.not.found.for.patient=Encounter was not found for patient ''{0}''
+@MODULE_ID@.error.dispensation.item.cannot.be.cancelled.due.its.iterrupted=Medicament ''{0}'' can not be canceled because it was interrupted
+@MODULE_ID@.error.dispensation.item.cannot.be.cancelled.due.its.expired=Medicament ''{0}'' can not be canceled because it has expired.
