--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -8,3 +8,5 @@ pharmacyapi.cannot.create.prescription.without.date=Nao pode criar Prescricao se
 pharmacyapi.cannot.create.prescription.for.future.date=Nao e possivel criar Prescricao para data futura''{0}''
 pharmacyapi.error.visit.not.found.for.patient=Nao foi efectuado checkin para o paciente ''{0}''
 pharmacyapi.error.encounter.not.found.for.patient=Nao foi encontrado Seguimento para o paciente ''{0}''
+pharmacyapi.error.dispensation.item.cannot.be.cancelled.due.its.iterrupted=Medicamento ''{0}'' não pode ser cancelado pois foi interrompido.
+pharmacyapi.error.dispensation.item.cannot.be.cancelled.due.its.expired=Medicamento ''{0}'' não pode ser cancelado pois está expirado.
