added backEnd currentDate on cancellationDispensation and adjusts

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-#This line must not be removed, because it contains BOM to indicate the UTF-8 encoding.
 pharmacyapi.title=OpenMRS Pharmacy Module
 
 pharmacyapi.invalid.prescription=Invalid prescriprion
@@ -11,3 +10,4 @@ pharmacyapi.error.visit.not.found.for.patient=No checkin found for patient ''{0}
 pharmacyapi.error.encounter.not.found.for.patient=Encounter was not found for patient ''{0}''
 @MODULE_ID@.error.dispensation.item.cannot.be.cancelled.due.its.iterrupted=Medicament ''{0}'' can not be canceled because it was interrupted
 @MODULE_ID@.error.dispensation.item.cannot.be.cancelled.due.its.expired=Medicament ''{0}'' can not be canceled because it has expired.
+pharmacyapi.error.insufficent.stock.for.dispensation=There is no stock availability for the drug (s) ''{0}''
