--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1,4 +1,3 @@
-#This line must not be removed, because it contains BOM to indicate the UTF-8 encoding.
 pharmacyapi.title=OpenMRS Pharmacy Module
 
 pharmacyapi.invalid.prescription=Prescricao Invalida
@@ -10,3 +9,4 @@ pharmacyapi.error.visit.not.found.for.patient=Nao foi efectuado checkin para o p
 pharmacyapi.error.encounter.not.found.for.patient=Nao foi encontrado Seguimento para o paciente ''{0}''
 pharmacyapi.error.dispensation.item.cannot.be.cancelled.due.its.iterrupted=Medicamento ''{0}'' não pode ser cancelado pois foi interrompido.
 pharmacyapi.error.dispensation.item.cannot.be.cancelled.due.its.expired=Medicamento ''{0}'' não pode ser cancelado pois está expirado.
+pharmacyapi.error.insufficent.stock.for.dispensation=Não existe disponibilidade de estoque para o(s) medicamento(s)  ''{0}''
